--- a/practice/week3.html
+++ b/practice/week3.html
@@ -18,7 +18,7 @@
     <main>
         <section>
             <h2>News Article</h2>
-            <img href="https://picsum.photo/300" alt="placeholder image">
+            <img src="https://picsum.photos/200/200" alt="placeholder img">
             <p class="pink-background">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nobis explicabo, sed repellendus obcaecati incidunt repudiandae porro impedit, necessitatibus voluptatum consequatur voluptate, architecto reprehenderit distinctio ratione aperiam laborum nemo dolor temporibus iure nisi quae nesciunt aspernatur. Dolor voluptatum provident magnam.</p>
             <p class="pink-background">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nobis explicabo, sed repellendus obcaecati incidunt repudiandae porro impedit, necessitatibus voluptatum consequatur voluptate, architecto reprehenderit distinctio ratione aperiam laborum nemo dolor temporibus iure nisi quae nesciunt aspernatur. Dolor voluptatum provident magnam.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nobis explicabo, sed repellendus obcaecati incidunt repudiandae porro impedit, necessitatibus voluptatum consequatur voluptate, architecto reprehenderit distinctio ratione aperiam laborum nemo dolor temporibus iure nisi quae nesciunt aspernatur. Dolor voluptatum provident magnam.</p>
