--- a/final-project/site-plan.html
+++ b/final-project/site-plan.html
@@ -24,7 +24,7 @@
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>This would be for potential employers. For me to able to show them projects I have done and be able to be a freelance work.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
@@ -58,10 +58,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: Roboto<!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Open Sans <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
