--- a/final-project/site-plan.html
+++ b/final-project/site-plan.html
@@ -84,8 +84,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Experience</a>
+        <a href="#">Contact</a>
       </nav>
       <hr>
       <h2>
@@ -96,10 +96,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Experience <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Contact  <!-- change this -->
         </div>
 
         <div class="top">
@@ -121,30 +121,36 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Computer Science Major
+        My name is Nicholas Frezzia, I am currently attending Brigham Young Universiy - Idaho.
+        I&apos;m persuing a degree in Computer Programming. I collaborate with other to help build appealing and 
+        responsive web pages.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/headshot.jpeg" alt="Headshot">
+        <img src="images/byui-logo.png" alt="Brigham Young Universiy - Idaho">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Experience</h3>
       <p>
-        [Written copy for the Page 2 here]
+        At Engagex, I served as a Sales Development Team Lead, where I managed a team of 30 and collaborated closely with the CEO and State Farm agents to enhance sales strategies. My leadership contributed to a 20% increase in company-wide sales during Q1 2022, demonstrating my ability to drive results through effective team management and strategic collaboration. <br>
+          <br>
+        Currently, as a Software Engineer Intern at Rizzler AI, I design and implement onboarding flows for our mobile app. I focus on user data management and personalization to enhance interactions, ensuring a seamless experience for users. This role has refined my software development skills and deepened my understanding of user engagement in the AI space.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/engagex_corp__logo.jpeg" alt="Engagex Logo">
+        <img src="images/rizzlr.png" alt="rizzlr logo">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Contact</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Below are all the ways to get in contact with me!
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
-
+        <img src="images/email.jpg" alt="Email logo">
+        <img src="images/github.png" alt="github logo">
+        <img src="images/instagram.jpg" alt="instagram logo">
+        <img src="images/linkedin.webp" alt="linked in logo">
       </ul>
       <hr>
       <h2>
