Updated personal site

--- a/final-project/site-plan.html
+++ b/final-project/site-plan.html
@@ -119,13 +119,12 @@
       <h2>
         Content
       </h2>
-      <h3>Home page</h3>
+      <h3>Home page / About me </h3>
       <p>
         Computer Science Major
-        My name is Nicholas Frezzia, I am currently attending Brigham Young Universiy - Idaho.
-        I&apos;m persuing a degree in Computer Programming. I collaborate with other to help build appealing and 
-        responsive web pages.
-      </p>
+        Welcome to my portfolio! My name is Nicholas Frezzia, and I am a Computer Science student at BYU Idaho. I am excited to share my journey as an aspiring software developer. This is the place where I track my progress, projects, and connect with others in the tech world. At this point, as a beginning programmer, I want to build a strong foundation in coding, particularly in Python and JavaScript, two languages which I am learning and applying actively.BYU Idaho has been a great learning experience and indeed very rewarding, with courses that really pushed me out of my comfort zone to think creatively and critically. I'm learning how to approach problems in a logical manner, structure code efficiently, and gain confidence in being able to tackle new concepts in programming. My love for technology stems from a desire to understand how things work and how I can use those insights to create solutions that make an impact. Other than in class, I do self-study to improve my understanding and increase the set of skills by reading tutorials and coding exercises to know more.
+        Apart from programming, I like to be out and about, being active. One of my favorite ways to unwind with friends would have to be soccer; it keeps me balanced and recharged.
+        I believe that activities or hobbies away from work and study allow me to come back to my projects fresh and rejuvenated. I also enjoy connecting with other like-minded individuals, be it a fellow student, developer, or someone in the tech industry. Thanks again for stopping by my site—I hope you get a nice overview of my background, my skills, and my aspirations!
       <p>Images for the Home page</p>
         <img src="images/headshot.jpeg" alt="Headshot">
         <img src="images/byui-logo.png" alt="Brigham Young Universiy - Idaho">
@@ -133,18 +132,19 @@
       </ul>
       <h3>Experience</h3>
       <p>
-        At Engagex, I served as a Sales Development Team Lead, where I managed a team of 30 and collaborated closely with the CEO and State Farm agents to enhance sales strategies. My leadership contributed to a 20% increase in company-wide sales during Q1 2022, demonstrating my ability to drive results through effective team management and strategic collaboration. <br>
-          <br>
-        Currently, as a Software Engineer Intern at Rizzler AI, I design and implement onboarding flows for our mobile app. I focus on user data management and personalization to enhance interactions, ensuring a seamless experience for users. This role has refined my software development skills and deepened my understanding of user engagement in the AI space.
+        Even though I am in my early career, experiences have helped shape me both as a programmer and a professional. At Rizzler AI, during my internship, I worked on an AI-driven onboarding project. Thus, a part of my duties includes designing and implementing user flows to ensure new users experience a smooth and personalized experience through tailoring the interface to meet diverse needs and preferences.
+        This project has given me the opportunity to get hands-on experience with React in creating interactive, intuitive user interfaces, and with Xcode in mobile application development. The internship has exposed me to real-world programming challenges and strengthened my problem-solving abilities. From working on user-centered design, I learned how critical it is to keep the user experience first and foremost. I have developed data management skills that make sure that each user's experience is seamless and optimized. With each new project, my understanding of software development expands, and I sharpen my thinking ability in relation to how technology can solve real-world problems.
+        Before my internship, I was working with Engagex, where I developed skills in leadership and teamwork. Engagex was a call center with a partnership with State Farm. I worked there for four years and rose through the ranks to become a team lead, then subsequently, a sales development team lead. My responsibilities included training new employees and ensuring that our team met performance targets set, motivating others to excel.
+        My time at Engagex taught me the importance of clear communication, patience, and resilience. As a leader, I worked to create a positive environment in which my team felt supported and empowered to perform at their best. The leadership skills I gained at Engagex continue to influence my approach to projects and teamwork in tech, always reminding me that good collaboration is the key to success. Both my time at Engagex and my internship at Rizzler AI have been invaluable in shaping my professional skills. I’ve learned how to meet challenges head-on, work through problems thoughtfully, and stay committed to improving my technical and interpersonal skills. These experiences make me eager to keep learning, growing, and contributing to future projects.
       </p>
       <p>Images for the Page 2</p>
         <img src="images/engagex_corp__logo.jpeg" alt="Engagex Logo">
-        <img src="images/rizzlr.png" alt="rizzlr logo">
+        <img src="images/rizlrLogo.png" alt="rizzlr logo">
 
       </ul>
       <h3>Contact</h3>
       <p>
-        Below are all the ways to get in contact with me!
+        If you’re interested in connecting, discussing opportunities, or collaborating on projects, I’d love to hear from you! Whether you’re a recruiter, fellow developer, or someone who enjoys tech discussions, don’t hesitate to reach out through the contact information on this site. Thanks for stopping by my portfolio. I am looking forward to meeting you and exploring new possibilities together!
       </p>
       <p>Images for the Page 3</p>
         <img src="images/email.jpg" alt="Email logo">
