Fixed more changes

--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -44,23 +44,18 @@
             <div class="title">
               <h3>Main Fork of the Salmon River, Idaho</h3>
             </div>
-            <p class="description">Nestled deep in the Frank Church Wilderness of No Return winds the Salmon river. The Salmon was given the nickname long ago as the River of No Return by the people living near it because of the number of folks that came to visit and fell so in love with the rugged beauty of the river that they never left.
-              Herds of elk and deer graze on the hillsides around the river and bear and bighorn sheep are also commonly sighted. The river corridor is also lined with awe inspiring ponderosa pine which tower over the sandy beaches in the campsites and provide shelter from sun or rain when needed.
-              Let's not forget the rapids! They range from class I-IV. The Salmon is one of the longest undammed rivers in the United States. As a free flowing river the water is higher, faster, and colder in the early summer and lower, slower, and warmer in the late summer. There are good rapids all summer...but families with children who like to swim tend to appreciate the late summer's slower, warmer water more.</p>
+            <p class="description">Nestled deep in the Frank Church Wilderness of No Return winds the Salmon river. The river earned the nickname “River of No Return” because many who ventured here fell in love with its rugged beauty and stayed. Herds of elk and deer graze the hillsides, and sightings of bear and bighorn sheep are common. The river is lined with towering ponderosa pine that offer shade at campsites. Rapids range from class I-IV, and the water varies from fast and cold in the early summer to slower and warmer in the late summer, ideal for families with children.</p>
           </div>
          </div>
          <div class="content-section reversed">
           <div class="reversed-image">
-            <img src="./images/GrayCanyon.jpg" alt="Grey Canyon">
+            <img src="./images/GrayCanyon.jpg" alt="Gray Canyon, Utah">
           </div>
           <div class="reversed-text-container">
             <div class="title-reversed">
               <h3>Desolation and Gray Canyon, Utah</h3>
             </div>
-            <p class="description">Winding through canyons in central Utah, in some of the most desolate land anywhere, the Green river flows towards the mighty Colorado river and the sea. High grey stone cliffs, beautiful desert scenery, and great rapids have made this run famous. This 84-mile trip runs from from Sand Wash to Swaseys Rapid (just outside Green River Utah) and boasts outstanding scenery, interesting geologic formations, evidence of prehistoric and historic human activity, and great whitewater opportunities.
-              Desolation is rated a Class II/III and is usually done in 6 days
-              Desolation Canyon has been recognized as a National Landmark.  This designation is based on the uniqueness and rich history that the canyon tells.
-              </p>
+            <p class="description">Winding through canyons in central Utah, the Green River flows towards the Colorado River. This 84-mile trip runs from Sand Wash to Swaseys Rapid and boasts outstanding scenery, fascinating geological formations, and great whitewater. Rated Class II/III, Desolation Canyon is usually done over 6 days and has been recognized as a National Landmark due to its historical significance.</p>
           </div>
          </div>
          <div class="content-section">
@@ -69,28 +64,23 @@
           </div>
           <div class="text-container">
             <div class="title">
-              <h3>Main Fork of the Salmon River, Idaho</h3>
+              <h3>Grand Canyon, Arizona</h3>
             </div>
-            <p class="description">This is the grand daddy of all canyons and the grand daddy of all river trips. You will never forget your visit to the Grand Canyon.
-              Grand Canyon river rafting combines world-class whitewater with breathtaking scenery to make one truly unforgettable river experience. The canyon is filled not only with exhilarating whitewater rapids, but with side canyons and ancient indian ruins accessible only by river.
-              CLASS I - X: The Grand Canyon uses a unique river rating scale. The rapids in the Canyon are technically rated I - X ( 1 - 10) to accommodate such a wide variety of rapids and river variances. However, most people are familiar with the regular I - V river rating scale, so we often refer to both.
-              </p>
+            <p class="description">This iconic canyon offers the ultimate river rafting experience. Combining world-class whitewater with breathtaking scenery, the Grand Canyon promises an unforgettable adventure. The river is filled with exhilarating rapids and side canyons containing ancient ruins. Rapids range from Class I to Class X, offering something for all levels of adventurers.</p>
           </div>
         </div>
       </main>
       <footer>
         <p>Dry Oar &copy; 2024 - Nico Frezzia</p>
-        <p><a href="site-plan-rafting.html">Site Plan</a></p>
-        <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-          <a href="https://facebook.com" target="_blank">
-            <img src="images/facebook.png" alt="fb icon" />
+          <a href="https://facebook.com" target="_blank" alt="Visit our Facebook page">
+            <img src="images/facebook.png" alt="Facebook Icon" />
           </a>
-          <a href="https://twitter.com" target="_blank">
-            <img src="images/twitter.png" alt="twitter icon" />
+          <a href="https://twitter.com" target="_blank" alt="Visit our Twitter page">
+            <img src="images/twitter.png" alt="Twitter Icon" />
           </a>
-          <a href="https://instagram.com" target="_blank">
-            <img src="images/instagram.png" alt="instagram icon" />
+          <a href="https://instagram.com" target="_blank" alt="Visit our Instagram page">
+            <img src="images/instagram.png" alt="Instagram Icon" />
           </a>
         </div>
       </footer>
