--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -73,13 +73,13 @@
       <footer>
         <p>Dry Oar &copy; 2024 - Nico Frezzia</p>
         <div class="social">
-          <a href="https://facebook.com" target="_blank" alt="Visit our Facebook page">
+          <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" alt="Facebook Icon" />
           </a>
-          <a href="https://twitter.com" target="_blank" alt="Visit our Twitter page">
+          <a href="https://twitter.com" target="_blank">
             <img src="images/twitter.png" alt="Twitter Icon" />
           </a>
-          <a href="https://instagram.com" target="_blank" alt="Visit our Instagram page">
+          <a href="https://instagram.com" target="_blank" >
             <img src="images/instagram.png" alt="Instagram Icon" />
           </a>
         </div>
