--- a/final-project/index.html
+++ b/final-project/index.html
@@ -10,12 +10,12 @@
     <div class="page-container">
         <nav id="navigation">
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/Experience">Experience</a></li>
-                <li><a href="/Projects">Projects</a></li>
-                <li><a href="/Skills">Skills</a></li>
-                <li><a href="/Education">Education</a></li>
-                <li><a href="/Contact">Contact</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./experience.html">Experience</a></li>
+                <li><a href="./projects.html">Projects</a></li>
+                <li><a href="./skills.html">Skills</a></li>
+                <li><a href="./education.html">Education</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="fade-out1">
@@ -155,11 +155,11 @@
                 </div>
               </div>
             </div>
-            <div class="section-divider animation-in"></div>
-                <hr class="section-divider-hr"></hr>
-                    <p>Projects</p>
-                <hr class="section-divider-hr"></hr>
-            </div>
+            <div class="section-divider animation-in">
+              <hr class="section-divider-hr"></hr>
+                <p>Projects</p>
+              <hr class="section-divider-hr"></hr>
+          </div>
             <div class="projects-container">
                 <div class="project-container animation-in">
                     <div class="project-container-top">
@@ -199,7 +199,6 @@
                         <div class="image-container image-container-3">
                             <img src={ProjectThree} alt="project image" class="project-image project-3"/>
                             <div class="project-title">Project title 3</div>
-
                         </div>
                         <p class="project-descrtiption">Lorem ipsum dolor sit amet consectetur adipiscing elit urna pharetra habitasse, natoque class molestie purus fusce cursus arcu conubia eros. Lorem ipsum dolor sit amet consectetur adipiscing elit urna pharetra habitasse, natoque class molestie purus fusce cursus arcu conubia eros.</p>
                     </div>
@@ -251,6 +250,72 @@
                 <p>Skills</p>
                 <hr class="section-divider-hr"></hr>
             </div>
+          <div class="skills-container">
+              <div class="skill-container animation-in">
+                  <h1 class="skill-catergory">HTML</h1>
+                  <hr />
+                  <div class="skill-content">
+                      <div class="skill">
+                          <img src="images/html.png" alt="HTML5" />
+                          <p class="skill-description">HTML5</p>
+                      </div>
+                      <div class="skill">
+                          <img src="./images/react.png" alt="JSX" />
+                          <p class="skill-description">JSX</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="skill-container animation-in">
+                  <h1 class="skill-catergory">CSS</h1>
+                  <hr />
+                  <div class="skill-content">
+                      <div class="skill">
+                          <img src="images/css3.png" alt="CSS3" />
+                          <p class="skill-description">CSS3</p>
+                      </div>
+                      <div class="skill">
+                          <img src="images/tailwind.png" alt="Tailwind" />
+                          <p class="skill-description">Tailwind</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="skill-container animation-in">
+                  <h1 class="skill-catergory">Back end</h1>
+                  <hr />
+                  <div class="skill-content">
+                      <div class="skill">
+                          <img src="images/python.png" alt="Python" />
+                          <p class="skill-description">Python</p>
+                      </div>
+                      <div class="skill">
+                          <img src="./images/react.png" alt="Javascript" />
+                          <p class="skill-description">JavaScript</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="skill-container animation-in">
+                  <h1 class="skill-catergory">Other</h1>
+                  <hr />
+                  <div class="skill-content">
+                      <div class="skill">
+                          <img src="images/github.png" alt="Github" />
+                          <p class="skill-description">GitHub</p>
+                      </div>
+                      <div class="skill">
+                          <img src="images/figma.png" alt="Figma" />
+                          <p class="skill-description">Figma</p>
+                      </div>
+                      <div class="skill">
+                          <img src="./images/netlify.png" alt="Netlify" />
+                          <p class="skill-description">Netlify</p>
+                      </div>
+                      <div class="skill">
+                          <img src="images/canva.webp" alt="Canva" />
+                          <p class="skill-description">Canva</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
             <div class="section-divider animation-in">
                 <hr class="section-divider-hr"></hr>
                 <p>Education</p>
@@ -293,6 +358,77 @@
                     </ul>
                 </div>
             </div>
+            <div class="section-divider animation-in">
+              <hr class="section-divider-hr"></hr>
+                <p>Contact</p>
+              <hr class="section-divider-hr"></hr>
+              </div>
+              <div class="contact-container animition-in">
+                <div class="contact-icon-container animation-in">
+                  <a href="mailto:frezzia1629@gmail.com">
+                    <img src="images/mailIcon.png" class="contact-icon" />
+                  </a>
+                  <p>
+                    <a href="mailto:frezzia1629@gmail.com">frezzia1629@gmail.com</a>
+                  </p>
+                </div>
+                <div class="contact-icon-container animation-in">
+                  <a href="https://wwww.github.com/NicoFrezzia" target="_blank">
+                    <img src="images/github.png" class="contact-icon" />
+                  </a>
+                  <p>
+                    <a href="https://wwww.github.com/nicofrezzia" target="_blank">
+                      github.com/nicofrezzia
+                    </a>
+                  </p>
+                </div>
+                <div class="contact-icon-container animation-in-link">
+                  <a
+                    href="https://www.linkedin.com/in/nicholas-frezzia"
+                    target="_blank">
+                    <img src="images/linkedin.webp" class="contact-icon" />
+                  </a>
+                  <p>
+                    <a
+                      href="https://www.linkedin.com/in/nicholas-frezzia"
+                      target="_blank">
+                      linkedin.com/in/nicholas-frezzia
+                    </a>
+                  </p>
+                </div>
+                <div class="contact-icon-container animation-in-insta">
+                  <a href="https://www.instagram.com/nicofrezzia/" target="_blank">
+                    <img src="images/insta-removebg-preview.png" class="contact-icon" />
+                  </a>
+                  <p>
+                    <a href="https://www.instagram.com/nicofrezzia/" target="_blank">
+                      instagram.com/nicofrezzia
+                    </a>
+                  </p>
+                </div>
+                <div class="contact-icon-container animation-in-fb">
+                  <img src="images/facebook-removebg-preview.png" class="contact-icon" />
+                  <p>
+                    <a href="">facebook.com/nicholas.frezzia</a>
+                  </p>
+                </div>
+              </div>
     </div>
+    
 </body>
+<footer>
+  <div class="footer-container">
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/experience">Experience</a></li>
+        <li><a href="/projects">Projects</a></li>
+        <li><a href="/skills">Skills</a></li>
+        <li><a href="/education">Education</a></li>
+        <li><a href="/contact">Contact</a></li>
+    </ul>
+    <ul>
+      <li><a href="site-plan.html">Site plan link</a></li>
+    </ul>
+</div>
+</footer>
 </html>
