--- a/final-project/skills.html
+++ b/final-project/skills.html
@@ -10,12 +10,12 @@
     <div class="page-container">
         <nav id="navigation">
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./experience.html">Experience</a></li>
-                <li><a href="./projects.html">Projects</a></li>
-                <li><a href="./skills.html">Skills</a></li>
-                <li><a href="./education.html">Education</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="experience.html">Experience</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="section-divider animation-in">
@@ -94,12 +94,12 @@
 <footer>
     <div class="footer-container">
       <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="/experience">Experience</a></li>
-          <li><a href="/projects">Projects</a></li>
-          <li><a href="/skills">Skills</a></li>
-          <li><a href="/education">Education</a></li>
-          <li><a href="/contact">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="education.html">Education</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
       <ul>
         <li><a href="site-plan.html">Site plan link</a></li>
