--- a/final-project/index.html
+++ b/final-project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nicholas Frezzia</title>
-    <link rel="stylesheet" href="./styles/syles.css">
+    <link rel="stylesheet" href="styles/syles.css">
 </head>
 <body>
     <div class="page-container">
@@ -20,12 +20,12 @@
         </nav>
         <div class="fade-out1">
             <div class="headshot-container">
-                <img src="images/headshot.jpeg" alt="My Photo" class="headshot"/>
+                <img src="images/headshot.png" alt="My Photo" class="headshot"/>
             </div>
             <div class="home-hero animate__animated animate__fadeinup">
                 <p class="home-title"> Computer Science Major </p>
                 <p class="home-description">My name is Nicholas Frezzia, I am currently attending Brigham Young Universiy - Idaho.
-                I&apos;m persuing a degree in Computer Programming. I collaborate with other to help build appealing and 
+                I&apos;m pursuing a degree in Computer Programming. I collaborate with other to help build appealing and 
                 responsive web pages.</p>
             </div>
         </div>
