--- a/final-project/index.html
+++ b/final-project/index.html
@@ -20,7 +20,7 @@
         </nav>
         <div class="fade-out1">
             <div class="headshot-container">
-                <img src="images/headshot.png" alt="My Photo" class="headshot"/>
+                <img src="images/headshot.png" alt="My Photo" class="headshot">
             </div>
             <div class="home-hero animate__animated animate__fadeinup">
                 <p class="home-title"> Computer Science Major </p>
@@ -30,15 +30,15 @@
             </div>
         </div>
         <div class="section-divider animation-in">
-            <hr class="section-divider-hr"></hr>
+            <hr class="section-divider-hr">
               <p>Experience</p>
-            <hr class="section-divider-hr"></hr>
+            <hr class="section-divider-hr">
         </div>
             <div class="experience-content">
               <div class="experience-container animation-in">
                 <div class="experience-top">
                       <div class="experience-top-entry">
-                          <img class="rizzlr-logo" src="./images/RizzlrLogo.png" alt="Engagex Logo" />                
+                          <img class="rizzlr-logo" src="./images/RizzlrLogo.png" alt="Engagex Logo">                
                       </div>
                       <div class="experience-top-entry">
                           <p class="experience-company">Rizzlr</p>                
@@ -66,7 +66,6 @@
                 </div>
                 <div class="experience-bottom">
                   <p class="experience-location">
-                    <IoLocationOutline class="location-icon" />
                     Vinyard, UT
                   </p>
                   <p class="experience-time">
@@ -77,7 +76,7 @@
               <div class="experience-container animation-in">
                 <div class="experience-top">
                       <div class="experience-top-entry">
-                          <img class="Techtonic" src="./images/WebtonicLogo.png" alt="Engagex Logo" />                
+                          <img class="Techtonic" src="./images/WebtonicLogo.png" alt="Engagex Logo">                
                       </div>
                       <div class="experience-top-entry">
                           <p class="experience-company">Webtonic</p>                
@@ -105,7 +104,6 @@
                 </div>
                 <div class="experience-bottom">
                   <p class="experience-location">
-                    <IoLocationOutline class="location-icon" />
                     Rexburg, ID
                   </p>
                   <p class="experience-time">
@@ -116,7 +114,7 @@
               <div class="experience-container animation-in">
                 <div class="experience-top">
                       <div class="experience-top-entry">
-                          <img src="images/engagex_logo copy.png" alt="Engagex Logo" />                
+                          <img src="images/engagex_logo_copy.png" alt="Engagex Logo">                
                       </div>
                       <div class="experience-top-entry">
                           <p class="experience-company">EngageX</p>                
@@ -148,7 +146,6 @@
                 </div>
                 <div class="experience-bottom">
                   <p class="experience-location">
-                    <IoLocationOutline class="location-icon" />
                     Provo, UT
                   </p>
                   <p class="experience-time">October 2021 - May 2022</p>
@@ -164,7 +161,7 @@
                 <div class="project-container animation-in">
                     <div class="project-container-top">
                         <div class="image-container image-container-1">
-                            <img src={ProjectOne} alt="project image" class="project-image project-1"/>
+                            <img src="#" alt="project image" class="project-image project-1">
                             <div class="project-title">Project title 1</div>
 
                         </div>
@@ -181,7 +178,7 @@
                 <div class="project-container animation-in">
                     <div class="project-container-top">
                         <div class="image-container image-container-2">
-                            <img src={ProjectTwo} alt="project image" class="project-image project-2"/>
+                            <img src="#" alt="project image" class="project-image project-2">
                             <div class="project-title">Project title 2</div>
                         </div>
                         <p class="project-descrtiption">Lorem ipsum dolor sit amet consectetur adipiscing elit urna pharetra habitasse, natoque class molestie purus fusce cursus arcu conubia eros. </p>
@@ -197,7 +194,7 @@
                 <div class="project-container animation-in">
                     <div class="project-container-top">
                         <div class="image-container image-container-3">
-                            <img src={ProjectThree} alt="project image" class="project-image project-3"/>
+                            <img src="#" alt="project image" class="project-image project-3">
                             <div class="project-title">Project title 3</div>
                         </div>
                         <p class="project-descrtiption">Lorem ipsum dolor sit amet consectetur adipiscing elit urna pharetra habitasse, natoque class molestie purus fusce cursus arcu conubia eros. Lorem ipsum dolor sit amet consectetur adipiscing elit urna pharetra habitasse, natoque class molestie purus fusce cursus arcu conubia eros.</p>
@@ -213,7 +210,7 @@
                 <div class="project-container animation-in">
                     <div class="project-container-top">
                         <div class="image-container image-container-4">
-                            <img src={ProjectFour} alt="project image" class="project-image project-4"/>
+                            <img src="#" alt="project image" class="project-image project-4">
                             <div class="project-title">Project title 3</div>
                             
                         </div>
@@ -230,7 +227,7 @@
                 <div class="project-container animation-in">
                     <div class="project-container-top">
                         <div class="image-container image-container-5">
-                            <img src={ProjectFive} alt="project image" class="project-image project-5"/>
+                            <img src="#" alt="project image" class="project-image project-5">
                             <div class="project-title">Project title 3</div>
 
                         </div>
@@ -256,11 +253,11 @@
                   <hr />
                   <div class="skill-content">
                       <div class="skill">
-                          <img src="images/html.png" alt="HTML5" />
+                          <img src="images/html.png" alt="HTML5">
                           <p class="skill-description">HTML5</p>
                       </div>
                       <div class="skill">
-                          <img src="./images/react.png" alt="JSX" />
+                          <img src="./images/react.png" alt="JSX">
                           <p class="skill-description">JSX</p>
                       </div>
                   </div>
@@ -270,11 +267,11 @@
                   <hr />
                   <div class="skill-content">
                       <div class="skill">
-                          <img src="images/css3.png" alt="CSS3" />
+                          <img src="images/css3.png" alt="CSS3">
                           <p class="skill-description">CSS3</p>
                       </div>
                       <div class="skill">
-                          <img src="images/tailwind.png" alt="Tailwind" />
+                          <img src="images/tailwind.png" alt="Tailwind">
                           <p class="skill-description">Tailwind</p>
                       </div>
                   </div>
@@ -284,11 +281,11 @@
                   <hr />
                   <div class="skill-content">
                       <div class="skill">
-                          <img src="images/python.png" alt="Python" />
+                          <img src="images/python.png" alt="Python">
                           <p class="skill-description">Python</p>
                       </div>
                       <div class="skill">
-                          <img src="./images/react.png" alt="Javascript" />
+                          <img src="./images/react.png" alt="Javascript">
                           <p class="skill-description">JavaScript</p>
                       </div>
                   </div>
@@ -298,19 +295,19 @@
                   <hr />
                   <div class="skill-content">
                       <div class="skill">
-                          <img src="images/github.png" alt="Github" />
+                          <img src="images/github.png" alt="Github">
                           <p class="skill-description">GitHub</p>
                       </div>
                       <div class="skill">
-                          <img src="images/figma.png" alt="Figma" />
+                          <img src="images/figma.png" alt="Figma">
                           <p class="skill-description">Figma</p>
                       </div>
                       <div class="skill">
-                          <img src="./images/netlify.png" alt="Netlify" />
+                          <img src="./images/netlify.png" alt="Netlify">
                           <p class="skill-description">Netlify</p>
                       </div>
                       <div class="skill">
-                          <img src="images/canva.webp" alt="Canva" />
+                          <img src="images/canva.webp" alt="Canva">
                           <p class="skill-description">Canva</p>
                       </div>
                   </div>
@@ -324,7 +321,7 @@
             <div class="education-container">
                 <div class="education-container-left animation-in">
                     <div class="school-top">
-                        <img src="images/byui-logo.png" alt="Byui logo" />
+                        <img src="images/byui-logo.png" alt="Byui logo">
                         <p class="school-name">
                             <a href="https://www.byui.edu/" target="_blank">
                                 Brigham Young University-Idaho
@@ -342,7 +339,7 @@
                 </div>
                 <div class="education-container-right animation-in">
                     <div class="school-top">
-                        <img src="images/mtech.png" alt="Mtech Logo" />
+                        <img src="images/mtech.png" alt="Mtech Logo">
                         <p class="school-name">
                             <a href="https://mtec.edu/" target="_blank">
                                 Mountainland Technical College
@@ -366,7 +363,7 @@
               <div class="contact-container animition-in">
                 <div class="contact-icon-container animation-in">
                   <a href="mailto:frezzia1629@gmail.com">
-                    <img src="images/mailIcon.png" class="contact-icon" />
+                    <img src="images/mailIcon.png" alt="Mail Icon" class="contact-icon">
                   </a>
                   <p>
                     <a href="mailto:frezzia1629@gmail.com">frezzia1629@gmail.com</a>
@@ -374,7 +371,7 @@
                 </div>
                 <div class="contact-icon-container animation-in">
                   <a href="https://wwww.github.com/NicoFrezzia" target="_blank">
-                    <img src="images/github.png" class="contact-icon" />
+                    <img src="images/github.png" alt="GitHub Logo" class="contact-icon">
                   </a>
                   <p>
                     <a href="https://wwww.github.com/nicofrezzia" target="_blank">
@@ -386,7 +383,7 @@
                   <a
                     href="https://www.linkedin.com/in/nicholas-frezzia"
                     target="_blank">
-                    <img src="images/linkedin.webp" class="contact-icon" />
+                    <img src="images/linkedin.webp" alt="Linkedin Logo" class="contact-icon">
                   </a>
                   <p>
                     <a
@@ -398,7 +395,7 @@
                 </div>
                 <div class="contact-icon-container animation-in-insta">
                   <a href="https://www.instagram.com/nicofrezzia/" target="_blank">
-                    <img src="images/insta-removebg-preview.png" class="contact-icon" />
+                    <img src="images/insta-removebg-preview.png" alt="Insta Logo" class="contact-icon">
                   </a>
                   <p>
                     <a href="https://www.instagram.com/nicofrezzia/" target="_blank">
@@ -407,28 +404,27 @@
                   </p>
                 </div>
                 <div class="contact-icon-container animation-in-fb">
-                  <img src="images/facebook-removebg-preview.png" class="contact-icon" />
+                  <img src="images/facebook-removebg-preview.png" alt="facebook logo" class="contact-icon">
                   <p>
                     <a href="">facebook.com/nicholas.frezzia</a>
                   </p>
                 </div>
               </div>
     </div>
-    
+    <footer>
+      <div class="footer-container">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <ul>
+          <li><a href="site-plan.html">Site plan link</a></li>
+        </ul>
+    </div>
+    </footer>
 </body>
-<footer>
-  <div class="footer-container">
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="experience.html">Experience</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="skills.html">Skills</a></li>
-        <li><a href="education.html">Education</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-    <ul>
-      <li><a href="site-plan.html">Site plan link</a></li>
-    </ul>
-</div>
-</footer>
 </html>
