--- a/final-project/index.html
+++ b/final-project/index.html
@@ -153,9 +153,9 @@
               </div>
             </div>
             <div class="section-divider animation-in">
-              <hr class="section-divider-hr"></hr>
+              <hr class="section-divider-hr"> 
                 <p>Projects</p>
-              <hr class="section-divider-hr"></hr>
+              <hr class="section-divider-hr"> 
           </div>
             <div class="projects-container">
                 <div class="project-container animation-in">
@@ -243,9 +243,9 @@
                 </div>
             </div>
             <div class="section-divider animation-in">
-                <hr class="section-divider-hr"></hr>
+                <hr class="section-divider-hr"> 
                 <p>Skills</p>
-                <hr class="section-divider-hr"></hr>
+                <hr class="section-divider-hr"> 
             </div>
           <div class="skills-container">
               <div class="skill-container animation-in">
@@ -314,9 +314,9 @@
               </div>
           </div>
             <div class="section-divider animation-in">
-                <hr class="section-divider-hr"></hr>
+                <hr class="section-divider-hr"> 
                 <p>Education</p>
-                <hr class="section-divider-hr"></hr>
+                <hr class="section-divider-hr"> 
             </div>
             <div class="education-container">
                 <div class="education-container-left animation-in">
@@ -356,9 +356,9 @@
                 </div>
             </div>
             <div class="section-divider animation-in">
-              <hr class="section-divider-hr"></hr>
+              <hr class="section-divider-hr"> 
                 <p>Contact</p>
-              <hr class="section-divider-hr"></hr>
+              <hr class="section-divider-hr"> 
               </div>
               <div class="contact-container animition-in">
                 <div class="contact-icon-container animation-in">
