Finshed last changes

--- a/final-project/projects.html
+++ b/final-project/projects.html
@@ -23,91 +23,54 @@
               <p>Projects</p>
             <hr class="section-divider-hr"></hr>
         </div>
-          <div class="projects-container">
-              <div class="project-container animation-in">
-                  <div class="project-container-top">
-                      <div class="image-container image-container-1">
-                          <img src={ProjectOne} alt="project image" class="project-image project-1"/>
-                          <div class="project-title">Project title 1</div>
-
-                      </div>
-                      <p class="project-descrtiption">Lorem ipsum dolor sit amet consectetur adipiscing elit urna pharetra habitasse, natoque class molestie purus fusce cursus arcu conubia eros. Lorem ipsum dolor sit amet consectetur adipiscing elit urna pharetra habitasse, natoque class molestie purus fusce cursus arcu conubia eros.</p>
-                  </div>
-                  <div class="tech-container">
-                      <p>React.js</p>
-                      <p>CSS</p>
-                      <p>JSX</p>
-                      <p>HTML</p>
-                      <p>Tailwind</p>
-                  </div>
-              </div>
-              <div class="project-container animation-in">
-                  <div class="project-container-top">
-                      <div class="image-container image-container-2">
-                          <img src={ProjectTwo} alt="project image" class="project-image project-2"/>
-                          <div class="project-title">Project title 2</div>
-                      </div>
-                      <p class="project-descrtiption">Lorem ipsum dolor sit amet consectetur adipiscing elit urna pharetra habitasse, natoque class molestie purus fusce cursus arcu conubia eros. </p>
-                  </div>
-                  <div class="tech-container">
-                      <p>React.js</p>
-                      <p>CSS</p>
-                      <p>JSX</p>
-                      <p>HTML</p>
-                      <p>Tailwind</p>
-                  </div>
-              </div>
-              <div class="project-container animation-in">
-                  <div class="project-container-top">
-                      <div class="image-container image-container-3">
-                          <img src={ProjectThree} alt="project image" class="project-image project-3"/>
-                          <div class="project-title">Project title 3</div>
-                      </div>
-                      <p class="project-descrtiption">Lorem ipsum dolor sit amet consectetur adipiscing elit urna pharetra habitasse, natoque class molestie purus fusce cursus arcu conubia eros. Lorem ipsum dolor sit amet consectetur adipiscing elit urna pharetra habitasse, natoque class molestie purus fusce cursus arcu conubia eros.</p>
-                  </div>
-                  <div class="tech-container">
-                      <p>React.js</p>
-                      <p>CSS</p>
-                      <p>JSX</p>
-                      <p>HTML</p>
-                      <p>Tailwind</p>
-                  </div>
-              </div>
-              <div class="project-container animation-in">
-                  <div class="project-container-top">
-                      <div class="image-container image-container-4">
-                          <img src={ProjectFour} alt="project image" class="project-image project-4"/>
-                          <div class="project-title">Project title 3</div>
-                          
-                      </div>
-                      <p class="project-descrtiption">Lorem ipsum dolor sit amet consectetur adipiscing elit urna pharetra habitasse, natoque class molestie purus fusce cursus arcu conubia eros.</p>
-                  </div>
-                  <div class="tech-container">
-                      <p>React.js</p>
-                      <p>CSS</p>
-                      <p>JSX</p>
-                      <p>HTML</p>
-                      <p>Tailwind</p>
-                  </div>
-              </div>
-              <div class="project-container animation-in">
-                  <div class="project-container-top">
-                      <div class="image-container image-container-5">
-                          <img src={ProjectFive} alt="project image" class="project-image project-5"/>
-                          <div class="project-title">Project title 3</div>
-
-                      </div>
-                      <p class="project-descrtiption">Lorem ipsum dolor sit amet consectetur adipiscing elit urna pharetra habitasse, natoque class molestie purus fusce cursus arcu conubia eros. Lorem ipsum dolor sit amet consectetur adipiscing elit urna pharetra habitasse, natoque class molestie purus fusce cursus arcu conubia eros.</p>
-                  </div>
-                  <div class="tech-container">
-                      <p>React.js</p>
-                      <p>CSS</p>
-                      <p>JSX</p>
-                      <p>HTML</p>
-                      <p>Tailwind</p>
-                  </div>
-              </div>
-          </div>
+        <div class="projects-container">
+            <div class="project-container animation-in">
+                <div class="project-container-top">
+                    <div class="image-container image-container-1" >
+                        <a href="https://github.com/NicoFrezzia/Security-Camera" target="_blank"><img src="images/securty camera.png" alt="project image" class="project-image-desktop project-1"/> 
+                        <div class="project-title">Python Security Camera</div></a>
+                    </div>
+                    <p class="project-descrtiption">This program uses Python and OpenCV to capture video, detect faces and bodies in real time, and automatically record when motion is detected. The video is saved with a timestamp, and the recording stops after a few seconds of no detection. The user can stop the process by pressing &apos;q&apos;.</p>
+                </div>
+                <div class="tech-container">
+                    <p>Python</p>
+                    <p>OpenCV</p>
+                    <p>DateTime</p>
+                    <p>Time Module</p>
+                    <p>Haar Cascade Classifiers</p>
+                    <p>File Management</p>
+                </div>
+            </div>
+            <div class="project-container animation-in">
+                <div class="project-container-top">
+                    <div class="image-container image-container-2"><img src="images/Rizzlr_Desktop.png" alt="project image" class="project-image-desktop project-2"/>                        <div class="project-title">Rizzlr</div>
+                    </div>
+                    <p class="project-descrtiption">Rizzlr is a mobile app built with React.js, Tailwind CSS, JSX, JavaScript, HTML, Pods, Metro, and Expo Router. I created the onboarding process, designing a smooth flow that helps new users get started and personalize their experience while ensuring a fast, responsive, and dynamic interface.</p>
+                </div>
+                <div class="tech-container">
+                    <p>React.js</p>
+                    <p>Tailwind</p>
+                    <p>JSX</p>
+                    <p>JavaScript</p>
+                    <p>HTML</p>
+                    <p>Pods</p>
+                    <p>Metro</p>
+                    <p>Expo-router</p>
+                </div>
+            </div>
+            <div class="project-container animation-in">
+                <div class="project-container-top">
+                    <div class="image-container image-container-3">
+                        <a href="https://2024.igem.wiki/uvu-utah-2/index.html" target="_blank"><img src="images/iGEM.png" alt="project image" class="project-image-desktop project-3"/>                        <div class="project-title">iGEM - Bloom Busters</div></a>
+                    </div>
+                    <p class="project-descrtiption">I helped create a website for a medical conference in Paris that won a silver award. The site was built using HTML and CSS, with a focus on providing an intuitive and professional design that supported the event&apos;s content and user engagement.</p>
+                </div>
+                <div class="tech-container">
+                    <p>CSS</p>
+                    <p>HTML</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 <footer>
