Updated colors on the site plan and added pokedex on project pages

--- a/final-project/projects.html
+++ b/final-project/projects.html
@@ -70,6 +70,22 @@
                     <p>HTML</p>
                 </div>
             </div>
+            <div class="project-container animation-in">
+                <div class="project-container-top">
+                    <div class="image-container image-container-3">
+                        <a href="https://nicofrezzia.github.io/Pokedex/" target="_blank"><img src="images/Pokedex.png" alt="project image" class="project-image-desktop project-4"/>
+                        <div class="project-title">API Pokédex</div></a>
+                    </div>
+                    <p class="project-descrtiption">I created a Pokédex web page using the PokéAPI with HTML, CSS, and vanilla JavaScript. Users can browse a list of Pokémon, and the background color changes dynamically based on the selected Pokémon’s type. This project showcases my ability to work with APIs and create interactive, user-focused features.</p>
+                </div>
+                <div class="tech-container">
+                    <p>JavaScript</p>
+                    <p>Pokédex API</p>
+                    <p>CSS</p>
+                    <p>HTML</p>
+                    <p>Vanilla</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
