--- a/final-project/projects.html
+++ b/final-project/projects.html
@@ -19,9 +19,9 @@
             </ul>
         </nav>
         <div class="section-divider animation-in">
-            <hr class="section-divider-hr"></hr>
+            <hr class="section-divider-hr">
               <p>Projects</p>
-            <hr class="section-divider-hr"></hr>
+            <hr class="section-divider-hr">
         </div>
         <div class="projects-container">
             <div class="project-container animation-in">
@@ -88,20 +88,20 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="footer-container">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+          <ul>
+            <li><a href="site-plan.html">Site plan link</a></li>
+          </ul>
+      </div>
+      </footer>
 </body>
-<footer>
-    <div class="footer-container">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="experience.html">Experience</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="skills.html">Skills</a></li>
-        <li><a href="education.html">Education</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-      <ul>
-        <li><a href="site-plan.html">Site plan link</a></li>
-      </ul>
-  </div>
-  </footer>
 </html>
