--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -19,14 +19,14 @@
             </ul>
         </nav>
         <div class="section-divider animation-in">
-            <hr class="section-divider-hr"></hr>
+            <hr class="section-divider-hr">
               <p>Contact</p>
-            <hr class="section-divider-hr"></hr>
+            <hr class="section-divider-hr">
             </div>
             <div class="contact-container animition-in">
               <div class="contact-icon-container animation-in">
                 <a href="mailto:frezzia1629@gmail.com">
-                  <img src="images/mailIcon.png" class="contact-icon" />
+                  <img src="images/mailIcon.png" class="contact-icon"  alt="Mail Icon"/>
                 </a>
                 <p>
                   <a href="mailto:frezzia1629@gmail.com">frezzia1629@gmail.com</a>
@@ -34,7 +34,7 @@
               </div>
               <div class="contact-icon-container animation-in">
                 <a href="https://wwww.github.com/NicoFrezzia" target="_blank">
-                  <img src="images/github.png" class="contact-icon" />
+                  <img src="images/github.png" class="contact-icon" alt="Contact Icon"/>
                 </a>
                 <p>
                   <a href="https://wwww.github.com/nicofrezzia" target="_blank">
@@ -46,7 +46,7 @@
                 <a
                   href="https://www.linkedin.com/in/nicholas-frezzia"
                   target="_blank">
-                  <img src="images/linkedin.webp" class="contact-icon" />
+                  <img src="images/linkedin.webp" class="contact-icon" alt="Contact Icon"/>
                 </a>
                 <p>
                   <a
@@ -58,7 +58,7 @@
               </div>
               <div class="contact-icon-container animation-in-insta">
                 <a href="https://www.instagram.com/nicofrezzia/" target="_blank">
-                  <img src="images/insta-removebg-preview.png" class="contact-icon" />
+                  <img src="images/insta-removebg-preview.png" class="contact-icon" alt="Contact Icon"/>
                 </a>
                 <p>
                   <a href="https://www.instagram.com/nicofrezzia/" target="_blank">
@@ -67,27 +67,27 @@
                 </p>
               </div>
               <div class="contact-icon-container animation-in-fb">
-                <img src="images/facebook-removebg-preview.png" class="contact-icon" />
+                <img src="images/facebook-removebg-preview.png" class="contact-icon" alt="Contact Icon"/>
                 <p>
                   <a href="">facebook.com/nicholas.frezzia</a>
                 </p>
               </div>
             </div>
     </div>
+    <footer>
+        <div class="footer-container">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+          <ul>
+            <li><a href="site-plan.html">Site plan link</a></li>
+          </ul>
+      </div>
+      </footer>
 </body>
-<footer>
-    <div class="footer-container">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="experience.html">Experience</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="skills.html">Skills</a></li>
-        <li><a href="education.html">Education</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-      <ul>
-        <li><a href="site-plan.html">Site plan link</a></li>
-      </ul>
-  </div>
-  </footer>
 </html>
