--- a/final-project/projects.html
+++ b/final-project/projects.html
@@ -11,7 +11,7 @@
         <nav id="navigation">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="experience.html">Experience</a></li>
+                <!-- <li><a href="experience.html">Experience</a></li> -->
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="education.html">Education</a></li>
@@ -86,13 +86,30 @@
                     <p>Vanilla</p>
                 </div>
             </div>
+            <div class="project-container animation-in">
+                <div class="project-container-top">
+                    <div class="image-container image-container-3">
+                        <img src="images/Weather-App.png" alt="Weather app image" class="project-image-desktop project-3"/>
+                        <p class="project-title">Weather Application</p>
+                    </div>
+                    <p class="project-description">Weather application that takes the users geo location and displays their current weather and projections. Utilizes the Open Weather API</p>
+                </div>
+                <div class="project-container-bottom">
+                    <p class="project-github-link"></p>
+                    <div class="tech-container">
+                        <p>HTML</p>
+                        <p>CSS</p>
+                        <p>JavaScript</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <footer>
         <div class="footer-container">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="experience.html">Experience</a></li>
+            <!-- <li><a href="experience.html">Experience</a></li> -->
             <li><a href="projects.html">Projects</a></li>
             <li><a href="skills.html">Skills</a></li>
             <li><a href="education.html">Education</a></li>
