--- a/final-project/skills.html
+++ b/final-project/skills.html
@@ -11,7 +11,7 @@
         <nav id="navigation">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="experience.html">Experience</a></li>
+                <!-- <li><a href="experience.html">Experience</a></li> -->
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="education.html">Education</a></li>
@@ -95,7 +95,7 @@
     <div class="footer-container">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="experience.html">Experience</a></li>
+        <!-- <li><a href="experience.html">Experience</a></li> -->
         <li><a href="projects.html">Projects</a></li>
         <li><a href="skills.html">Skills</a></li>
         <li><a href="education.html">Education</a></li>
