--- a/final-project/index.html
+++ b/final-project/index.html
@@ -152,6 +152,7 @@
                 </div>
               </div>
             </div>
+      </div>
     <footer>
       <div class="footer-container">
         <ul>
